# polars-sqlite

./: .gitignore  Cargo.toml  README.md
res/: dtypes.v  test_sqlite3_read.sl3
src/: lib.rs
